# cvi4ic-notebooks

./: .gitignore  01-introduction.ipynb  02-image-representation.ipynb  03-image-filtering.ipynb  05-image-stitching.ipynb  07-cnns.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  fix_perms.sh  setup.sh
