[project]
name = "lecturenotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azureml>=0.2.7",
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.1.0",
    "keras-nightly>=3.13.0.dev0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "nvidia-cuda-nvcc-cu12>=12.8.93",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "tf-nightly>=2.21.0.dev0",
    "torch>=2.8.0",
    "visualkeras>=0.2.0",
    "xlstm>=2.0.4",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0"
]
